# mjlab_go2

./: .gitignore  README.md  main.py  pyproject.toml
src/mjlab_go2/robot/: go2_constants.py
src/mjlab_go2/scripts/: play.py  train.py
src/mjlab_go2/tasks/: rough_env_cfg.py
