[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mjlab-go2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = ["mjlab[dev]"]

[project.scripts]
mjlab_train = "mjlab_go2.scripts.train:main"
mjlab_play = "mjlab_go2.scripts.play:main"

[tool.ruff]
src = ["src"]
indent-width = 2
exclude = ["src/mjlab/third_party", "typings"]

[tool.uv.sources]
mjlab = { git = "https://github.com/mujocolab/mjlab", rev = "main" }
